Add the second recipe.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
     <h1>The odin recipes</h1>
-    <p>
-        <h2><a href="./recipes/pineapple-chicken.html">Pineapple Salsa Chicken</a></h2>
-    </p>
+    <ul>
+        <li> <h2><a href="./recipes/pineapple-chicken.html">Pineapple Salsa Chicken</a></h2></li>
+        <li> <h2><a href="./recipes/chicken-curry.html">The Chicken Curry</a></h2></li>
+    </ul>
 
     
 </body>
