link 3rd recipe to index.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li> <h2><a href="./recipes/pineapple-chicken.html">Pineapple Salsa Chicken</a></h2></li>
         <li> <h2><a href="./recipes/chicken-curry.html">The Chicken Curry</a></h2></li>
+        <li> <h2><a href="./recipes/prawn-curry.html">Thai Prawn Curry</a></h2></li>
     </ul>
 
     
