add css to main page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>The odin recipes</h1>
-    <ul>
-        <li> <h2><a href="./recipes/pineapple-chicken.html">Pineapple Salsa Chicken</a></h2></li>
-        <li> <h2><a href="./recipes/chicken-curry.html">The Chicken Curry</a></h2></li>
-        <li> <h2><a href="./recipes/prawn-curry.html">Thai Prawn Curry</a></h2></li>
-    </ul>
-
-    
+    <div class="MH">
+        <h1>The odin recipes</h1>
+    </div>
+    <div >
+        <ul class="rlist">
+            <li> <h2><a href="./recipes/pineapple-chicken.html">Pineapple Salsa Chicken</a></h2></li>
+            <li> <h2><a href="./recipes/chicken-curry.html">The Chicken Curry</a></h2></li>
+            <li> <h2><a href="./recipes/prawn-curry.html">Thai Prawn Curry</a></h2></li>
+        </ul>   
+    </div>
 </body>
 </html>
