centre the links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="MH">
         <h1>The odin recipes</h1>
     </div>
-    <div >
+    <div id="mlist" >
         <ul class="rlist">
             <li> <h2><a href="./recipes/pineapple-chicken.html">Pineapple Salsa Chicken</a></h2></li>
             <li> <h2><a href="./recipes/chicken-curry.html">The Chicken Curry</a></h2></li>
